Updated page TechDraw Symbol

--- a/wiki/TechDraw_Symbol.html
+++ b/wiki/TechDraw_Symbol.html
@@ -55,8 +55,8 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>The <b>TechDraw Symbol</b> tool inserts a Symbol object. A Symbol is a stripped down view that contains only a single <a href="SVG.html" title="SVG">SVG</a> file complying with the svg-tiny specification (see <a href="TechDraw_Templates.html#Notes" title="TechDraw Templates">TechDraw Templates</a>). 
-</p><p>A Symbol can be anything that helps annotate a drawing and that doesn't need to be further modified, it may however contain  <a href="Svg_Namespace.html#freecad:editable" title="Svg Namespace">editable texts</a>.
+<p>The <b>TechDraw Symbol</b> tool inserts a Symbol object. A Symbol is a stripped down view that contains only a single <a href="SVG.html" title="SVG">SVG</a> file complying with the svg-tiny specification (see <a href="TechDraw_Templates.html#Notes" title="TechDraw Templates">TechDraw Templates</a>).
+</p><p>A Symbol can be anything that helps annotate a drawing and that doesn't need to be further modified, it may however contain <a href="Svg_Namespace.html#freecad:editable" title="Svg Namespace">editable texts</a>.
 </p><p><span style="font-size:small;"><a href="Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: The <a href="TechDraw_View.html" title="TechDraw View">TechDraw View</a> tool can also create a Symbol.
 </p><p><span typeof="mw:File"><a href="index.php?title=TechDraw_SymbolSVG_sample.png&amp;filetimestamp=20181126223408&amp;.html" class="mw-file-description"><img src="File/TechDraw_SymbolSVG_sample.png" decoding="async" width="250" height="297" class="mw-file-element" data-file-width="322" data-file-height="383"></a></span>
 </p>
@@ -150,12 +150,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126095125
+Cached time: 20260126095205
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.111 seconds
-Real time usage: 0.136 seconds
+CPU time usage: 0.109 seconds
+Real time usage: 0.120 seconds
 Preprocessor visited node count: 705/1000000
 Post&#8208;expand include size: 26321/2097152 bytes
 Template argument size: 9777/2097152 bytes
@@ -166,19 +166,19 @@ Unstrip post&#8208;expand size: 3552/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.624      1 -total
- 18.34%    5.067      1 Template:TechDraw_Tools_navi
- 15.17%    4.190      5 Template:PropertyData
- 14.81%    4.090      2 Template:Navigation_menu_2
- 12.22%    3.377      1 Template:Userdocnavi
- 10.77%    2.976      5 Template:Variable
-  9.80%    2.708      1 Template:GuiCommand
-  8.51%    2.350      2 Template:Docnav
-  7.07%    1.954      1 Template:Code
-  5.85%    1.616      2 Template:Version
+100.00%   26.974      1 -total
+ 18.87%    5.090      5 Template:PropertyData
+ 16.67%    4.497      1 Template:TechDraw_Tools_navi
+ 15.38%    4.150      2 Template:Navigation_menu_2
+ 14.06%    3.792      5 Template:Variable
+  9.38%    2.531      1 Template:Userdocnavi
+  9.15%    2.469      2 Template:Docnav
+  8.78%    2.369      1 Template:GuiCommand
+  6.61%    1.784      1 Template:Code
+  6.19%    1.669      1 Template:TitleProperty
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74960-0!canonical and timestamp 20260126095132 and revision id 1744147. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74960-0!canonical and timestamp 20260126095245 and revision id 1744152. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
