--- a/wiki/it/Macro_BoundingBox_Tracing.html
+++ b/wiki/it/Macro_BoundingBox_Tracing.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_BoundingBox_Tracing.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Begrenzungsrahmen nachzeichen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_BoundingBox_Tracing.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro BoundingBox Tracing (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_BoundingBox_Tracing.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro BoundingBox Tracing (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_BoundingBox_Tracing.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: &#346;ledzenie ramki otaczaj&#261;cej (4% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_BoundingBox_Tracing.html" class="mw-pt-progress mw-pt-progress--med" title="Macro BoundingBox Tracing (56% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="../ru/Macro_BoundingBox_Tracing.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1072;&#1082;&#1088;&#1086;&#1089; BoundingBox Tracing (24% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
@@ -95,11 +95,8 @@ Traccia contenitore
 </p><p><span id="Icon"></span>
 </p>
 <h2><span class="mw-headline" id="Icona">Icona</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Download the file image and copy in to your macro directory.
-</p>
-</div>
-<p>Cliccare sull'immagine con il tasto destro del mouse e salvarla nella nuova posizione selezionando "Salva oggetto con nome ..." 
+<p>Scaricare l'immagine del file e copiarla nella cartella della macro.
+</p><p>Cliccare sull'immagine con il tasto destro del mouse e salvarla nella nuova posizione selezionando "Salva oggetto con nome ..." 
 </p><p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=BoundBoxTracing.png&amp;filetimestamp=20150129184619&amp;.html" class="mw-file-description"><img src="../File/BoundBoxTracing.png" decoding="async" width="46" height="46" class="mw-file-element" data-file-width="46" data-file-height="46"></a></span>
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
@@ -564,30 +561,30 @@ else:
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126095234
+Cached time: 20260126095256
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.049 seconds
-Real time usage: 0.070 seconds
-Preprocessor visited node count: 152/1000000
+CPU time usage: 0.039 seconds
+Real time usage: 0.056 seconds
+Preprocessor visited node count: 151/1000000
 Post&#8208;expand include size: 3492/2097152 bytes
 Template argument size: 26227/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 30904/5000000 bytes
+Unstrip post&#8208;expand size: 30905/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.282      1 -total
- 32.47%    3.988      1 Template:MacroCode
- 30.78%    3.780      1 Template:Macro/it
- 17.48%    2.147      2 Template:Code
- 15.18%    1.864      2 Template:Caption
+100.00%    8.017      1 -total
+ 32.33%    2.592      1 Template:Macro/it
+ 26.51%    2.125      1 Template:MacroCode
+ 22.08%    1.770      2 Template:Code
+ 14.91%    1.195      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126095234 and revision id 1744151. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126095255 and revision id 1744154. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
