--- a/wiki/TechDraw_Symbol.html
+++ b/wiki/TechDraw_Symbol.html
@@ -150,12 +150,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126095205
+Cached time: 20260126095337
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.109 seconds
-Real time usage: 0.120 seconds
+CPU time usage: 0.118 seconds
+Real time usage: 0.142 seconds
 Preprocessor visited node count: 705/1000000
 Post&#8208;expand include size: 26321/2097152 bytes
 Template argument size: 9777/2097152 bytes
@@ -166,19 +166,19 @@ Unstrip post&#8208;expand size: 3552/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.974      1 -total
- 18.87%    5.090      5 Template:PropertyData
- 16.67%    4.497      1 Template:TechDraw_Tools_navi
- 15.38%    4.150      2 Template:Navigation_menu_2
- 14.06%    3.792      5 Template:Variable
-  9.38%    2.531      1 Template:Userdocnavi
-  9.15%    2.469      2 Template:Docnav
-  8.78%    2.369      1 Template:GuiCommand
-  6.61%    1.784      1 Template:Code
-  6.19%    1.669      1 Template:TitleProperty
+100.00%   31.884      1 -total
+ 21.76%    6.937      1 Template:TechDraw_Tools_navi
+ 17.67%    5.635      2 Template:Navigation_menu_2
+ 17.26%    5.503      5 Template:PropertyData
+  9.95%    3.171      5 Template:Variable
+  9.69%    3.090      1 Template:Userdocnavi
+  9.07%    2.891      1 Template:GuiCommand
+  8.88%    2.832      2 Template:Docnav
+  5.53%    1.762      1 Template:Code
+  4.69%    1.495      1 Template:TitleProperty
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74960-0!canonical and timestamp 20260126095245 and revision id 1744152. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74960-0!canonical and timestamp 20260126095337 and revision id 1744152. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
