--- a/wiki/TechDraw_Image.html
+++ b/wiki/TechDraw_Image.html
@@ -1,7 +1,7 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw Image</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-TechDraw+Image&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="de/TechDraw_Image.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Bild (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/TechDraw_Image.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Image (82% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="fr/TechDraw_Image.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Image (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="it/TechDraw_Image.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Immagine (82% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="pl/TechDraw_Image.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw obraz bitmapy (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="ro/TechDraw_Image.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw Image (5% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -149,35 +149,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125131152
+Cached time: 20260126095343
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.127 seconds
-Real time usage: 0.167 seconds
-Preprocessor visited node count: 934/1000000
-Post&#8208;expand include size: 27198/2097152 bytes
-Template argument size: 9673/2097152 bytes
+CPU time usage: 0.116 seconds
+Real time usage: 0.148 seconds
+Preprocessor visited node count: 928/1000000
+Post&#8208;expand include size: 27180/2097152 bytes
+Template argument size: 9661/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2879/5000000 bytes
+Unstrip post&#8208;expand size: 2884/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.400      1 -total
- 18.13%    6.600      1 Template:TechDraw_Tools_navi
- 15.95%    5.807      7 Template:PropertyData
- 13.19%    4.801      9 Template:Variable
- 11.78%    4.289      2 Template:Navigation_menu_2
-  8.50%    3.094      2 Template:TitleProperty
-  6.79%    2.472      1 Template:Userdocnavi
-  6.68%    2.433      2 Template:PropertyView
-  6.24%    2.272      2 Template:Docnav
-  6.00%    2.183      1 Template:GuiCommand
+100.00%   32.212      1 -total
+ 17.31%    5.575      1 Template:TechDraw_Tools_navi
+ 14.88%    4.792      2 Template:Navigation_menu_2
+ 14.79%    4.765      7 Template:PropertyData
+ 12.89%    4.151      9 Template:Variable
+  8.67%    2.792      1 Template:Userdocnavi
+  8.54%    2.750      2 Template:PropertyView
+  7.20%    2.321      2 Template:TitleProperty
+  6.94%    2.236      2 Template:Docnav
+  6.57%    2.115      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78507-0!canonical and timestamp 20260125131204 and revision id 1743919. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78507-0!canonical and timestamp 20260126095343 and revision id 1744146. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
