Updated page Macro BoundingBox Tracing/it

--- a/wiki/it/Macro_BoundingBox_Tracing.html
+++ b/wiki/it/Macro_BoundingBox_Tracing.html
@@ -524,14 +524,9 @@ else:
         <span class="n">locPlacement</span> <span class="o">=</span> <span class="n">App</span><span class="o">.</span><span class="n">Placement</span><span class="p">(</span><span class="n">App</span><span class="o">.</span><span class="n">Vector</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">),</span> <span class="n">App</span><span class="o">.</span><span class="n">Rotation</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">),</span> <span class="n">App</span><span class="o">.</span><span class="n">Vector</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">))</span>
         <span class="k">return</span> <span class="n">locPlacement</span>
 </pre></div>
-<div class="mw-translate-fuzzy">
-<p>Version: 0.11 le Date: 2019/05/29: "nameLabel = str(unicodedata.normalize('NFKD', nameLabel).encode('ascii','ignore'))" instead "def()"
+<p>Versione: 0.11 Data: 2019/05/29: "nameLabel = str(unicodedata.normalize('NFKD', nameLabel).encode('ascii','ignore'))" invece di "def()"
+</p><p>Versione: 0.10 Data: 2019/05/23 upgrade &gt; 0.19 e sup il "&eacute;&ccedil;&agrave;.." with def() not encode()....
 </p>
-</div>
-<div class="mw-translate-fuzzy">
-<p>ver 0.10 le 2019/05/23 upgrade &gt; 0.19 and supp the "&eacute;&ccedil;&agrave;.." with def() not encode()....
-</p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>ver 0.9 le 2018-10-12: add test &gt; 17
 </p>
@@ -561,13 +556,13 @@ else:
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126095256
+Cached time: 20260126095421
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.056 seconds
-Preprocessor visited node count: 151/1000000
+CPU time usage: 0.047 seconds
+Real time usage: 0.126 seconds
+Preprocessor visited node count: 149/1000000
 Post&#8208;expand include size: 3492/2097152 bytes
 Template argument size: 26227/2097152 bytes
 Highest expansion depth: 5/100
@@ -577,14 +572,14 @@ Unstrip post&#8208;expand size: 30905/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.017      1 -total
- 32.33%    2.592      1 Template:Macro/it
- 26.51%    2.125      1 Template:MacroCode
- 22.08%    1.770      2 Template:Code
- 14.91%    1.195      2 Template:Caption
+100.00%   15.466      1 -total
+ 42.78%    6.616      2 Template:Caption
+ 25.26%    3.906      2 Template:Code
+ 16.88%    2.611      1 Template:Macro/it
+ 11.81%    1.827      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126095255 and revision id 1744154. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126095421 and revision id 1744170. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
