--- a/wiki/it/Macro_BoundingBox_Tracing.html
+++ b/wiki/it/Macro_BoundingBox_Tracing.html
@@ -526,11 +526,8 @@ else:
 </pre></div>
 <p>Versione: 0.11 Data: 2019/05/29: "nameLabel = str(unicodedata.normalize('NFKD', nameLabel).encode('ascii','ignore'))" invece di "def()"
 </p><p>Versione: 0.10 Data: 2019/05/23 upgrade &gt; 0.19 e sup il "&eacute;&ccedil;&agrave;.." with def() not encode()....
+</p><p>Versione: 0.9 del 2018-10-12: aggiunto test &gt; 17
 </p>
-<div class="mw-translate-fuzzy">
-<p>ver 0.9 le 2018-10-12: add test &gt; 17
-</p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="k">if</span> <span class="nb">int</span><span class="p">(</span><span class="n">FreeCAD</span><span class="o">.</span><span class="n">Version</span><span class="p">()[</span><span class="mi">1</span><span class="p">])</span> <span class="o">&gt;</span> <span class="mi">17</span><span class="p">:</span>      <span class="c1"># Version de FreeCAD</span>
     <span class="n">DisplayModeText</span>   <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="sa">u</span><span class="s2">"2D text"</span><span class="p">)</span> <span class="c1"># available&nbsp;: u"2D text" or u"3D text" </span>
 <span class="k">else</span><span class="p">:</span>
@@ -556,13 +553,13 @@ else:
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126095421
+Cached time: 20260126095439
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.047 seconds
-Real time usage: 0.126 seconds
-Preprocessor visited node count: 149/1000000
+CPU time usage: 0.041 seconds
+Real time usage: 0.075 seconds
+Preprocessor visited node count: 148/1000000
 Post&#8208;expand include size: 3492/2097152 bytes
 Template argument size: 26227/2097152 bytes
 Highest expansion depth: 5/100
@@ -572,14 +569,14 @@ Unstrip post&#8208;expand size: 30905/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.466      1 -total
- 42.78%    6.616      2 Template:Caption
- 25.26%    3.906      2 Template:Code
- 16.88%    2.611      1 Template:Macro/it
- 11.81%    1.827      1 Template:MacroCode
+100.00%   15.198      1 -total
+ 27.64%    4.200      1 Template:MacroCode
+ 27.37%    4.159      1 Template:Macro/it
+ 26.13%    3.971      2 Template:Code
+ 13.21%    2.007      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126095421 and revision id 1744170. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126095439 and revision id 1744172. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
