Created page with "== Въведение =="

--- a/wiki/bg/Object_name.html
+++ b/wiki/bg/Object_name.html
@@ -10,7 +10,9 @@
 <li><a href="../ru/Object_name.html" class="mw-pt-progress mw-pt-progress--low" title="Object name/ru (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Object_name.html" class="mw-pt-progress mw-pt-progress--low" title="&#12458;&#12502;&#12472;&#12455;&#12463;&#12488;&#12398;&#21517;&#21069; (8% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Object_name.html" class="mw-pt-progress mw-pt-progress--med" title="&#45824;&#49345;&#47932; &#47749;&#52845; (25% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
+<p><span id="Introduction"></span>
+</p>
+<h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <p>All objects in the program have an <a href="../Object_name.html" title="Object name">object name</a> that uniquely identifies them in a given document.
 </p><p>This information applies to all objects derived from <a href="../App_DocumentObject.html" title="App DocumentObject">App DocumentObject</a> (<code>App::DocumentObject</code> class), which essentially comprises all objects that are possible to create in a document.
@@ -112,13 +114,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126095500
+Cached time: 20260126095506
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.111 seconds
-Preprocessor visited node count: 708/1000000
+CPU time usage: 0.073 seconds
+Real time usage: 0.108 seconds
+Preprocessor visited node count: 709/1000000
 Post&#8208;expand include size: 9268/2097152 bytes
 Template argument size: 3249/2097152 bytes
 Highest expansion depth: 7/100
@@ -128,19 +130,19 @@ Unstrip post&#8208;expand size: 6904/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.398      1 -total
- 29.14%    9.733      1 Template:Userdocnavi/bg
- 14.67%    4.899      5 Template:Code
- 12.50%    4.174      1 Template:PropertyData
- 11.93%    3.984     78 Template:Incode
- 11.63%    3.883      1 Template:Navigation_menu_2
-  6.88%    2.299      1 Template:Variable
-  6.10%    2.038      4 Template:KEY
-  5.98%    1.998      3 Template:MenuCommand
-  5.38%    1.798      1 Template:TOCright
+100.00%   27.921      1 -total
+ 24.41%    6.816      1 Template:Userdocnavi/bg
+ 14.93%    4.169     78 Template:Incode
+ 12.36%    3.451      1 Template:PropertyData
+ 11.72%    3.272      5 Template:Code
+  9.90%    2.763      1 Template:Navigation_menu_2
+  7.81%    2.181      4 Template:KEY
+  6.61%    1.846      1 Template:TOCright
+  6.57%    1.835      1 Template:Variable
+  5.15%    1.438      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412656-0!canonical and timestamp 20260126095500 and revision id 1744174. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412656-0!canonical and timestamp 20260126095506 and revision id 1744176. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
