Created page with "Всички обекти в програмата имат [[Object_name|има на обект]], което уникално ги идентифицира в даден документ."

--- a/wiki/bg/Object_name.html
+++ b/wiki/bg/Object_name.html
@@ -14,7 +14,7 @@
 </p>
 <h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<p>All objects in the program have an <a href="../Object_name.html" title="Object name">object name</a> that uniquely identifies them in a given document.
+<p>&#1042;&#1089;&#1080;&#1095;&#1082;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074; &#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1072;&#1090;&#1072; &#1080;&#1084;&#1072;&#1090; <a href="../Object_name.html" title="Object name">&#1080;&#1084;&#1072; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;</a>, &#1082;&#1086;&#1077;&#1090;&#1086; &#1091;&#1085;&#1080;&#1082;&#1072;&#1083;&#1085;&#1086; &#1075;&#1080; &#1080;&#1076;&#1077;&#1085;&#1090;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072; &#1074; &#1076;&#1072;&#1076;&#1077;&#1085; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;.
 </p><p>This information applies to all objects derived from <a href="../App_DocumentObject.html" title="App DocumentObject">App DocumentObject</a> (<code>App::DocumentObject</code> class), which essentially comprises all objects that are possible to create in a document.
 </p>
 <h2><span class="mw-headline" id="Names">Names</span></h2>
@@ -114,12 +114,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126095506
+Cached time: 20260126095555
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.073 seconds
-Real time usage: 0.108 seconds
+CPU time usage: 0.070 seconds
+Real time usage: 0.103 seconds
 Preprocessor visited node count: 709/1000000
 Post&#8208;expand include size: 9268/2097152 bytes
 Template argument size: 3249/2097152 bytes
@@ -130,19 +130,19 @@ Unstrip post&#8208;expand size: 6904/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.921      1 -total
- 24.41%    6.816      1 Template:Userdocnavi/bg
- 14.93%    4.169     78 Template:Incode
- 12.36%    3.451      1 Template:PropertyData
- 11.72%    3.272      5 Template:Code
-  9.90%    2.763      1 Template:Navigation_menu_2
-  7.81%    2.181      4 Template:KEY
-  6.61%    1.846      1 Template:TOCright
-  6.57%    1.835      1 Template:Variable
-  5.15%    1.438      3 Template:MenuCommand
+100.00%   27.852      1 -total
+ 21.04%    5.859      1 Template:Userdocnavi/bg
+ 15.40%    4.289      1 Template:PropertyData
+ 13.49%    3.758     78 Template:Incode
+ 12.38%    3.449      5 Template:Code
+  9.79%    2.727      1 Template:Navigation_menu_2
+  9.31%    2.594      3 Template:MenuCommand
+  7.48%    2.082      4 Template:KEY
+  7.17%    1.997      1 Template:Variable
+  6.77%    1.884      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412656-0!canonical and timestamp 20260126095506 and revision id 1744176. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412656-0!canonical and timestamp 20260126095555 and revision id 1744178. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
