--- a/wiki/pl/FEM_ConstraintElectrostaticPotential.html
+++ b/wiki/pl/FEM_ConstraintElectrostaticPotential.html
@@ -68,7 +68,7 @@
 <h2><span class="mw-headline" id="Opis">Opis</span></h2>
 <p>Tworzy warunek brzegowy MES dla potencja&#322;u elektrostatycznego. Do u&#380;ycia razem z r&oacute;wnaniem <a href="../pl/FEM_EquationElectrostatic.html" title="FEM EquationElectrostatic/pl">elektrostatycznym</a>, <a href="../pl/FEM_EquationElectricforce.html" title="FEM EquationElectricforce/pl">si&#322;y elektrostatycznej</a>, <a href="../pl/FEM_EquationMagnetodynamic.html" title="FEM EquationMagnetodynamic/pl">magnetodynamicznym</a>, <a href="../pl/FEM_EquationMagnetodynamic2D.html" title="FEM EquationMagnetodynamic2D/pl">magnetodynamicznym 2D</a> lub <a href="../pl/FEM_EquationStaticCurrent.html" title="FEM EquationStaticCurrent/pl">statycznym przewodzenia pr&#261;du</a>.
 </p><p><span style="font-size:small;"><a href="../pl/Release_notes_1.1.html" title="Release notes 1.1/pl">dost&#281;pne w wersji 1.1</a></span>: Dzia&#322;a r&oacute;wnie&#380; z przebudowanym <a href="../FEM_SolverCalculixCcxtools.html" title="FEM SolverCalculixCcxtools">obiektem solvera CalculiX</a>.
-</p><p><span style="font-size:small;"><a href="../Release_notes_1.2.html" title="Release notes 1.2">introduced in 1.2</a></span>: Can also be used to apply a magnetic flux density boundary condition.
+</p><p><span style="font-size:small;"><a href="../index.php?title=Release_notes_1.2/pl&amp;action=edit&amp;redlink=1.html" class="new" title="Release notes 1.2/pl (page does not exist)">dost&#281;pne w wersji 1.2</a></span>: Mo&#380;e by&#263; r&oacute;wnie&#380; u&#380;yte do przy&#322;o&#380;enia warunku brzegowego g&#281;sto&#347;ci strumienia magnetycznego.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FEM_electro_potential_sphere.PNG&amp;filetimestamp=20250617071812&amp;.html" class="mw-file-description"><img src="../File/FEM_electro_potential_sphere.PNG" decoding="async" width="400" height="414" class="mw-file-element" data-file-width="598" data-file-height="619"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Warunek brzegowy potencja&#322;u elektrostatycznego w <a href="../pl/FEM_Examples.html" title="FEM Examples/pl">Przyk&#322;adzie MES</a> pojemno&#347;ci dw&oacute;ch sfer</p>
@@ -159,14 +159,14 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126095031
+Cached time: 20260126095608
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.077 seconds
-Real time usage: 0.103 seconds
+CPU time usage: 0.085 seconds
+Real time usage: 0.133 seconds
 Preprocessor visited node count: 374/1000000
-Post&#8208;expand include size: 25602/2097152 bytes
+Post&#8208;expand include size: 25610/2097152 bytes
 Template argument size: 10402/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
@@ -175,19 +175,19 @@ Unstrip post&#8208;expand size: 1796/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.163      1 -total
- 37.01%   11.163      1 Template:GuiCommandContainer
- 22.83%    6.887      1 Template:FEM_Tools_navi/pl
- 22.03%    6.644      1 Template:GuiCommandFemInfo/pl
- 11.72%    3.534      2 Template:Navigation_menu_2
-  8.02%    2.420      1 Template:GuiCommand/pl
-  7.09%    2.138      2 Template:Docnav
-  6.77%    2.042      1 Template:Userdocnavi/pl
-  6.66%    2.009      1 Template:VersionMinus/pl
-  6.00%    1.809      2 Template:VersionPlus/pl
+100.00%   34.126      1 -total
+ 42.50%   14.502      1 Template:GuiCommandContainer
+ 26.22%    8.947      1 Template:GuiCommandFemInfo/pl
+ 21.49%    7.333      1 Template:FEM_Tools_navi/pl
+ 10.14%    3.462      1 Template:VersionMinus/pl
+ 10.02%    3.419      2 Template:Navigation_menu_2
+  8.48%    2.894      1 Template:GuiCommand/pl
+  7.31%    2.493      5 Template:Version/pl
+  7.08%    2.418      1 Template:Userdocnavi/pl
+  6.70%    2.287      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:273093-0!canonical and timestamp 20260126095030 and revision id 1744140. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:273093-0!canonical and timestamp 20260126095607 and revision id 1744180. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
