--- a/wiki/bg/Object_name.html
+++ b/wiki/bg/Object_name.html
@@ -6,7 +6,7 @@
 <li><a href="../it/Object_name.html" class="mw-pt-progress mw-pt-progress--complete" title="Nome dell'oggetto (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Object_name.html" class="mw-pt-progress mw-pt-progress--complete" title="Nazwa obiektu (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Object_name.html" class="mw-pt-progress mw-pt-progress--low" title="Nome do objeto (12% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Object_name.html" class="mw-pt-progress mw-pt-progress--low" title="Object name/ru (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Object_name.html" class="mw-pt-progress mw-pt-progress--low" title="&#12458;&#12502;&#12472;&#12455;&#12463;&#12488;&#12398;&#21517;&#21069; (8% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Object_name.html" class="mw-pt-progress mw-pt-progress--med" title="&#45824;&#49345;&#47932; &#47749;&#52845; (25% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -15,7 +15,7 @@
 <h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <p>&#1042;&#1089;&#1080;&#1095;&#1082;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074; &#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1072;&#1090;&#1072; &#1080;&#1084;&#1072;&#1090; <a class="mw-selflink selflink">&#1080;&#1084;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;</a>, &#1082;&#1086;&#1077;&#1090;&#1086; &#1091;&#1085;&#1080;&#1082;&#1072;&#1083;&#1085;&#1086; &#1075;&#1080; &#1080;&#1076;&#1077;&#1085;&#1090;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072; &#1074; &#1076;&#1072;&#1076;&#1077;&#1085; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;.
-</p><p>This information applies to all objects derived from <a href="../App_DocumentObject.html" title="App DocumentObject">App DocumentObject</a> (<code>App::DocumentObject</code> class), which essentially comprises all objects that are possible to create in a document.
+</p><p>&#1058;&#1072;&#1079;&#1080; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103; &#1089;&#1077; &#1087;&#1088;&#1080;&#1083;&#1072;&#1075;&#1072; &#1079;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1087;&#1086;&#1083;&#1091;&#1095;&#1077;&#1085;&#1080; &#1086;&#1090;  <a href="../App_DocumentObject.html" title="App DocumentObject">App DocumentObject</a> (&#1082;&#1083;&#1072;&#1089; <code>App::DocumentObject</code>), &#1082;&#1086;&#1081;&#1090;&#1086; &#1087;&#1086; &#1089;&#1098;&#1097;&#1077;&#1089;&#1090;&#1074;&#1086; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1077; &#1074;&#1098;&#1079;&#1084;&#1086;&#1078;&#1085;&#1086; &#1076;&#1072; &#1089;&#1077; &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1072;&#1090; &#1074; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;.
 </p>
 <h2><span class="mw-headline" id="Names">Names</span></h2>
 <p>There are various properties for Names:
@@ -114,12 +114,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126095626
+Cached time: 20260126095803
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.067 seconds
-Real time usage: 0.087 seconds
+CPU time usage: 0.058 seconds
+Real time usage: 0.090 seconds
 Preprocessor visited node count: 709/1000000
 Post&#8208;expand include size: 9268/2097152 bytes
 Template argument size: 3249/2097152 bytes
@@ -130,19 +130,19 @@ Unstrip post&#8208;expand size: 6904/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.883      1 -total
- 23.97%    6.684      1 Template:Userdocnavi/bg
- 13.89%    3.873     78 Template:Incode
- 12.79%    3.566      5 Template:Code
- 12.29%    3.426      1 Template:PropertyData
- 10.29%    2.868      1 Template:Navigation_menu_2
-  6.85%    1.910      4 Template:KEY
-  6.75%    1.882      1 Template:Variable
-  6.33%    1.765      1 Template:TOCright
-  5.20%    1.450      3 Template:MenuCommand
+100.00%   22.947      1 -total
+ 25.52%    5.855      1 Template:Userdocnavi/bg
+ 14.21%    3.260      5 Template:Code
+ 14.20%    3.258      1 Template:PropertyData
+ 12.76%    2.929     78 Template:Incode
+ 11.36%    2.607      1 Template:Navigation_menu_2
+  6.48%    1.486      4 Template:KEY
+  6.38%    1.465      1 Template:Variable
+  5.04%    1.157      3 Template:MenuCommand
+  4.72%    1.083      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412656-0!canonical and timestamp 20260126095626 and revision id 1744182. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412656-0!canonical and timestamp 20260126095803 and revision id 1744186. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
