--- a/wiki/bg/Object_name.html
+++ b/wiki/bg/Object_name.html
@@ -16,8 +16,9 @@
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <p>&#1042;&#1089;&#1080;&#1095;&#1082;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074; &#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1072;&#1090;&#1072; &#1080;&#1084;&#1072;&#1090; <a class="mw-selflink selflink">&#1080;&#1084;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;</a>, &#1082;&#1086;&#1077;&#1090;&#1086; &#1091;&#1085;&#1080;&#1082;&#1072;&#1083;&#1085;&#1086; &#1075;&#1080; &#1080;&#1076;&#1077;&#1085;&#1090;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072; &#1074; &#1076;&#1072;&#1076;&#1077;&#1085; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;.
 </p><p>&#1058;&#1072;&#1079;&#1080; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103; &#1089;&#1077; &#1087;&#1088;&#1080;&#1083;&#1072;&#1075;&#1072; &#1079;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1087;&#1086;&#1083;&#1091;&#1095;&#1077;&#1085;&#1080; &#1086;&#1090;  <a href="../App_DocumentObject.html" title="App DocumentObject">App DocumentObject</a> (&#1082;&#1083;&#1072;&#1089; <code>App::DocumentObject</code>), &#1082;&#1086;&#1081;&#1090;&#1086; &#1087;&#1086; &#1089;&#1098;&#1097;&#1077;&#1089;&#1090;&#1074;&#1086; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1077; &#1074;&#1098;&#1079;&#1084;&#1086;&#1078;&#1085;&#1086; &#1076;&#1072; &#1089;&#1077; &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1072;&#1090; &#1074; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;.
+</p><p><span id="Names"></span>
 </p>
-<h2><span class="mw-headline" id="Names">Names</span></h2>
+<h2><span id=".D0.91.D0.B5.D0.BB.D0.B5.D0.B6.D0.BA.D0.B8"></span><span class="mw-headline" id="&#1041;&#1077;&#1083;&#1077;&#1078;&#1082;&#1080;">&#1041;&#1077;&#1083;&#1077;&#1078;&#1082;&#1080;</span></h2>
 <p>There are various properties for Names:
 </p>
 <ul><li>The <code>Name</code> can only include simple alphanumeric characters, and the underscore, <code>[_0-9a-zA-Z]</code>.</li>
@@ -114,13 +115,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126095803
+Cached time: 20260126095815
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.058 seconds
-Real time usage: 0.090 seconds
-Preprocessor visited node count: 709/1000000
+CPU time usage: 0.065 seconds
+Real time usage: 0.089 seconds
+Preprocessor visited node count: 710/1000000
 Post&#8208;expand include size: 9268/2097152 bytes
 Template argument size: 3249/2097152 bytes
 Highest expansion depth: 7/100
@@ -130,19 +131,19 @@ Unstrip post&#8208;expand size: 6904/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.947      1 -total
- 25.52%    5.855      1 Template:Userdocnavi/bg
- 14.21%    3.260      5 Template:Code
- 14.20%    3.258      1 Template:PropertyData
- 12.76%    2.929     78 Template:Incode
- 11.36%    2.607      1 Template:Navigation_menu_2
-  6.48%    1.486      4 Template:KEY
-  6.38%    1.465      1 Template:Variable
-  5.04%    1.157      3 Template:MenuCommand
-  4.72%    1.083      1 Template:TOCright
+100.00%   24.219      1 -total
+ 23.16%    5.608      1 Template:Userdocnavi/bg
+ 14.29%    3.462      1 Template:PropertyData
+ 13.73%    3.325     78 Template:Incode
+ 12.49%    3.024      5 Template:Code
+  9.23%    2.236      1 Template:Navigation_menu_2
+  6.96%    1.685      1 Template:Variable
+  6.95%    1.683      4 Template:KEY
+  6.22%    1.506      3 Template:MenuCommand
+  5.72%    1.386      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412656-0!canonical and timestamp 20260126095803 and revision id 1744186. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412656-0!canonical and timestamp 20260126095815 and revision id 1744188. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
