--- a/wiki/it/Macro_BoundingBox_Tracing.html
+++ b/wiki/it/Macro_BoundingBox_Tracing.html
@@ -533,10 +533,8 @@ else:
 <span class="k">else</span><span class="p">:</span>
     <span class="n">DisplayModeText</span>   <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="sa">u</span><span class="s2">"Screen"</span><span class="p">)</span>  <span class="c1"># available&nbsp;: u"Screen" or u"World"</span>
 </pre></div>
-<div class="mw-translate-fuzzy">
-<p>ver 0.8 le 05/10/2018: upgrade the ver 0.8 compatible with FC 0.17 (getGlobalPlacement)
+<p>Versione: 0.8 Data: 05/10/2018: upgrade la ver 0.8 compatibile con FC 0.17 (getGlobalPlacement)
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>ver 0.7 le 28/01/2018: correct error with label accent "nameLabel  = unicodedata.normalize('NFKD', nameLabel).encode('ascii','ignore')"
 </p>
@@ -553,13 +551,13 @@ else:
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126095439
+Cached time: 20260126095937
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.041 seconds
-Real time usage: 0.075 seconds
-Preprocessor visited node count: 148/1000000
+CPU time usage: 0.049 seconds
+Real time usage: 0.088 seconds
+Preprocessor visited node count: 147/1000000
 Post&#8208;expand include size: 3492/2097152 bytes
 Template argument size: 26227/2097152 bytes
 Highest expansion depth: 5/100
@@ -569,14 +567,14 @@ Unstrip post&#8208;expand size: 30905/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.198      1 -total
- 27.64%    4.200      1 Template:MacroCode
- 27.37%    4.159      1 Template:Macro/it
- 26.13%    3.971      2 Template:Code
- 13.21%    2.007      2 Template:Caption
+100.00%   14.888      1 -total
+ 36.01%    5.361      2 Template:Code
+ 31.95%    4.757      1 Template:Macro/it
+ 15.02%    2.236      1 Template:MacroCode
+ 13.12%    1.954      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126095439 and revision id 1744172. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126095937 and revision id 1744190. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
