--- a/wiki/it/Macro_BoundingBox_Tracing.html
+++ b/wiki/it/Macro_BoundingBox_Tracing.html
@@ -534,11 +534,8 @@ else:
     <span class="n">DisplayModeText</span>   <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="sa">u</span><span class="s2">"Screen"</span><span class="p">)</span>  <span class="c1"># available&nbsp;: u"Screen" or u"World"</span>
 </pre></div>
 <p>Versione: 0.8 Data: 05/10/2018: upgrade la ver 0.8 compatibile con FC 0.17 (getGlobalPlacement)
+</p><p>Versione: 0.7 Data: 28/01/2018: corretto errore con accento etichetta "nameLabel  = unicodedata.normalize('NFKD', nameLabel).encode('ascii','ignore')"
 </p>
-<div class="mw-translate-fuzzy">
-<p>ver 0.7 le 28/01/2018: correct error with label accent "nameLabel  = unicodedata.normalize('NFKD', nameLabel).encode('ascii','ignore')"
-</p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>ver 0.6 le 08/08/2017: aggiunto testo info dimensioni , contener per retangoli, informazioni rettangolo, informazioni volume, &eacute; sezione configurazione color , label object selected
 </p>
@@ -551,13 +548,13 @@ else:
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126095937
+Cached time: 20260126100002
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.049 seconds
-Real time usage: 0.088 seconds
-Preprocessor visited node count: 147/1000000
+CPU time usage: 0.075 seconds
+Real time usage: 0.363 seconds
+Preprocessor visited node count: 146/1000000
 Post&#8208;expand include size: 3492/2097152 bytes
 Template argument size: 26227/2097152 bytes
 Highest expansion depth: 5/100
@@ -567,14 +564,14 @@ Unstrip post&#8208;expand size: 30905/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.888      1 -total
- 36.01%    5.361      2 Template:Code
- 31.95%    4.757      1 Template:Macro/it
- 15.02%    2.236      1 Template:MacroCode
- 13.12%    1.954      2 Template:Caption
+100.00%   59.889      1 -total
+ 35.48%   21.246      1 Template:Macro/it
+ 24.43%   14.631      2 Template:Code
+ 20.03%   11.998      1 Template:MacroCode
+ 18.87%   11.301      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126095937 and revision id 1744190. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126100001 and revision id 1744192. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
