Updated page FEM ConstraintElectrostaticPotential/pl

--- a/wiki/pl/FEM_ConstraintElectrostaticPotential.html
+++ b/wiki/pl/FEM_ConstraintElectrostaticPotential.html
@@ -90,19 +90,18 @@
 <p>To okno dialogowe zawiera nast&#281;puj&#261;ce ustawienia:
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FEM_ElectrostaticPotential_dialog.png&amp;filetimestamp=20260125143029&amp;.html" class="mw-file-description"><img src="../File/FEM_ElectrostaticPotential_dialog.png" decoding="async" width="489" height="616" class="mw-file-element" data-file-width="489" data-file-height="616"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li><b>Warunek brzegowy</b>: Aby wybra&#263; mi&#281;dzy warunkiem brzegowym typu Dirichleta (zadany potencja&#322;) a warunkiem brzegowym typu Neumanna (zadana g&#281;sto&#347;&#263; strumienia elektrycznego). <span style="font-size:small;"><a href="../pl/Release_notes_1.1.html" title="Release notes 1.1/pl">dost&#281;pne w wersji 1.1</a></span></li>
 <li><b>Potencja&#322;</b>: Potencja&#322; elektryczny w V.</li>
-<li><b>Potencja&#322; elektromagnetyczny</b>: Aby aktywowa&#263; wprowadzanie sk&#322;adowych pola wektorowego potencja&#322;u.</li>
-<li><b>x</b>: Rzeczywista / urojona cz&#281;&#347;&#263; potencja&#322;u w kierunku x w V.<br> Dla innych uk&#322;ad&oacute;w wsp&oacute;&#322;rz&#281;dnych ni&#380; kartezja&#324;ski 3D, to b&#281;dzie pierwsza wsp&oacute;&#322;rz&#281;dna uk&#322;adu zamiast x.</li>
-<li><b>y</b>: Rzeczywista/urojona cz&#281;&#347;&#263; potencja&#322;u w kierunku y w V.<br> Dla innych uk&#322;ad&oacute;w wsp&oacute;&#322;rz&#281;dnych ni&#380; kartezja&#324;ski 3D, to b&#281;dzie druga wsp&oacute;&#322;rz&#281;dna uk&#322;adu zamiast y.</li>
-<li><b>z</b>: Rzeczywista / urojona cz&#281;&#347;&#263; potencja&#322;u w kierunku z w V.<br> Dla innych uk&#322;ad&oacute;w wsp&oacute;&#322;rz&#281;dnych ni&#380; kartezja&#324;ski 3D, to b&#281;dzie trzecia wsp&oacute;&#322;rz&#281;dna uk&#322;adu zamiast z. Je&#347;li uk&#322;ad nie ma trzeciej wsp&oacute;&#322;rz&#281;dnej, to ustawienie zostanie zignorowane.</li>
-<li><b>pola wyboru obok x, y, z</b>: Aby zadeklarowa&#263; potencja&#322; w danym kierunku jako niewiadom&#261; dla solvera.</li>
-<li><b>Niesko&#324;czono&#347;&#263; elektryczna</b>: Opcja za&#322;o&#380;enia, &#380;e sferyczna obj&#281;to&#347;&#263; wok&oacute;&#322; powierzchni rozci&#261;ga si&#281; w niesko&#324;czono&#347;&#263;.</li>
+<li><b>Potencja&#322; elektromagnetyczny</b>: Aby aktywowa&#263; wprowadzanie sk&#322;adowych pola wektorowego potencja&#322;u.
+<ul><li><b>x/y/z</b>: Rzeczywista / urojona cz&#281;&#347;&#263; potencja&#322;u w kierunku x, y lub z w V.<br> Dla innych uk&#322;ad&oacute;w wsp&oacute;&#322;rz&#281;dnych ni&#380; kartezja&#324;ski 3D, to b&#281;dzie pierwsza, druga lub trzecia wsp&oacute;&#322;rz&#281;dna uk&#322;adu zamiast x, y lub z. Je&#347;li uk&#322;ad nie ma trzeciej wsp&oacute;&#322;rz&#281;dnej, to z zostanie zignorowane.</li>
+<li><b>pola wyboru obok x, y, z</b>: Aby zadeklarowa&#263; potencja&#322; w danym kierunku jako niewiadom&#261; dla solvera.</li></ul></li>
+<li><b>Niesko&#324;czono&#347;&#263; elektryczna</b>(<span style="font-size:small;color:green;">wersja 1.2 i powy&#380;ej</span>: <b>Pole dalekie</b>): Opcja za&#322;o&#380;enia, &#380;e sferyczna obj&#281;to&#347;&#263; wok&oacute;&#322; powierzchni rozci&#261;ga si&#281; w niesko&#324;czono&#347;&#263;.</li>
 <li><b>Definicja potencja&#322;u elektrostatycznego</b>: Opcja ustawienia sta&#322;ego potencja&#322;u.</li>
 <li><b>G&#281;sto&#347;&#263; strumienia elektrycznego</b>: G&#281;sto&#347;&#263; strumienia elektrycznego (pole przesuni&#281;cia elektrycznego <i>D</i>) w C/m^2. <span style="font-size:small;"><a href="../pl/Release_notes_1.1.html" title="Release notes 1.1/pl">dost&#281;pne w wersji 1.1</a></span></li>
+<li><b>G&#281;sto&#347;&#263; strumienia magnetycznego</b> W&#322;&#261;cza wprowadzanie sk&#322;adowych g&#281;sto&#347;ci strumienia magnetycznego w mT. <span style="font-size:small;"><a href="../index.php?title=Release_notes_1.2/pl&amp;action=edit&amp;redlink=1.html" class="new" title="Release notes 1.2/pl (page does not exist)">dost&#281;pne w wersji 1.2</a></span>
+<ul><li><b>x/y/z</b>: Rzeczywista / urojona cz&#281;&#347;&#263; g&#281;sto&#347;ci strumienia magnetycznego w kierunku x, y lub z w V.<br> Dla innych uk&#322;ad&oacute;w wsp&oacute;&#322;rz&#281;dnych ni&#380; kartezja&#324;ski 3D, to b&#281;dzie pierwsza, druga lub trzecia wsp&oacute;&#322;rz&#281;dna uk&#322;adu zamiast x, y lub z. Je&#347;li uk&#322;ad nie ma trzeciej wsp&oacute;&#322;rz&#281;dnej, to z zostanie zignorowane.</li>
+<li><b>pola wyboru obok x, y, z</b>: Aby zadeklarowa&#263; g&#281;sto&#347;&#263; strumienia magnetycznego w danym kierunku jako niewiadom&#261; dla solvera.</li></ul></li>
 <li><b>Jednostka przepustowa</b>: Licznik cia&#322;a <i>(lub &#347;ciany)</i> z pojemno&#347;ci&#261;.</li></ul>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Uwagi">Uwagi</span></h2>
@@ -157,15 +156,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126095731
+Cached time: 20260126100141
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.111 seconds
-Real time usage: 0.158 seconds
-Preprocessor visited node count: 388/1000000
-Post&#8208;expand include size: 25766/2097152 bytes
-Template argument size: 10411/2097152 bytes
+CPU time usage: 0.085 seconds
+Real time usage: 0.123 seconds
+Preprocessor visited node count: 402/1000000
+Post&#8208;expand include size: 25922/2097152 bytes
+Template argument size: 10420/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -173,19 +172,19 @@ Unstrip post&#8208;expand size: 1796/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.028      1 -total
- 41.87%   15.921      1 Template:GuiCommandContainer
- 22.81%    8.673      1 Template:GuiCommandFemInfo/pl
- 16.05%    6.102      1 Template:FEM_Tools_navi/pl
- 11.77%    4.477      2 Template:Docnav
- 11.52%    4.379      1 Template:GuiCommand/pl
-  8.18%    3.109      1 Template:Caption
-  7.89%    2.999      2 Template:Navigation_menu_2
-  6.82%    2.592      3 Template:Button
-  4.86%    1.848      1 Template:VersionMinus/pl
+100.00%   29.694      1 -total
+ 42.58%   12.645      1 Template:GuiCommandContainer
+ 23.24%    6.901      1 Template:GuiCommandFemInfo/pl
+ 17.74%    5.269      1 Template:FEM_Tools_navi/pl
+ 11.50%    3.414      2 Template:Docnav
+ 10.95%    3.252      1 Template:GuiCommand/pl
+  9.48%    2.815      2 Template:Navigation_menu_2
+  6.39%    1.897      7 Template:Version/pl
+  6.37%    1.892      1 Template:VersionMinus/pl
+  5.55%    1.648      1 Template:Userdocnavi/pl
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:273093-0!canonical and timestamp 20260126095731 and revision id 1744184. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:273093-0!canonical and timestamp 20260126100141 and revision id 1744194. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
