Updated page Macro BoundingBox Tracing/it

--- a/wiki/it/Macro_BoundingBox_Tracing.html
+++ b/wiki/it/Macro_BoundingBox_Tracing.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_BoundingBox_Tracing.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Begrenzungsrahmen nachzeichen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_BoundingBox_Tracing.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro BoundingBox Tracing (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_BoundingBox_Tracing.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro BoundingBox Tracing (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_BoundingBox_Tracing.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: &#346;ledzenie ramki otaczaj&#261;cej (4% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_BoundingBox_Tracing.html" class="mw-pt-progress mw-pt-progress--med" title="Macro BoundingBox Tracing (56% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="../ru/Macro_BoundingBox_Tracing.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1072;&#1082;&#1088;&#1086;&#1089; BoundingBox Tracing (24% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
@@ -537,37 +537,34 @@ else:
 </p><p>Versione: 0.7 Data: 28/01/2018: corretto errore con accento etichetta "nameLabel  = unicodedata.normalize('NFKD', nameLabel).encode('ascii','ignore')"
 </p><p>Versione: 0.6 Data: 08/08/2017: aggiunto testo info dimensioni , contenitore per rettangoli, informazioni rettangolo, informazioni volume, aggiunto sezione configurazione colore, etichetta oggetto selezionato
 </p><p>ver 0.5 le 08/05/2017&nbsp;: upgrade adesso acceta gli elementi "mesh" e "Points" grazie wmayer <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=13&amp;t=22331">Makro Bounding-Box f&uuml;r STL importierte Teile und f&uuml;r Punktewolken</a>
+</p><p>Versione: 0.4  Data: 04/06/2016&nbsp;: testa se valore = 0 allora non crea il boundbox (esempio: oggetto Draft)
 </p>
-<div class="mw-translate-fuzzy">
-<p>ver 0.4  il 04/06/2016&nbsp;: testo se value = 0 allora non crea il boundbox (esempio: obietto Draft)
-</p>
-</div>
 <!-- 
 NewPP limit report
-Cached time: 20260126102227
+Cached time: 20260126102326
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.055 seconds
-Preprocessor visited node count: 145/1000000
+CPU time usage: 0.040 seconds
+Real time usage: 0.059 seconds
+Preprocessor visited node count: 144/1000000
 Post&#8208;expand include size: 3492/2097152 bytes
 Template argument size: 26227/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 30905/5000000 bytes
+Unstrip post&#8208;expand size: 30909/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.544      1 -total
- 33.05%    2.824      1 Template:Macro/it
- 25.16%    2.150      1 Template:MacroCode
- 23.90%    2.042      2 Template:Code
- 13.58%    1.160      2 Template:Caption
+100.00%    7.895      1 -total
+ 27.47%    2.169      1 Template:Macro/it
+ 23.99%    1.894      2 Template:Code
+ 23.52%    1.857      1 Template:MacroCode
+ 20.20%    1.595      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126102227 and revision id 1744204. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126102325 and revision id 1744206. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
