--- a/wiki/it/Macro_BoundingBox_Tracing.html
+++ b/wiki/it/Macro_BoundingBox_Tracing.html
@@ -86,7 +86,7 @@ Traccia contenitore
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <ol><li>Selezionare l'oggetto</li>
 <li>lanciare la macro</li></ol>
-<dl><dd>Result: Vengono creati 6 rettangoli rossi attorno all'oggetto, il colore pu&ograve; essere cambiato.</dd></dl>
+<dl><dd>Risultato: Vengono creati 6 rettangoli rossi attorno all'oggetto, il colore pu&ograve; essere cambiato.</dd></dl>
 <p><span typeof="mw:File"><a href="../index.php?title=Macro_BoundingBox_Tracing_01.png&amp;filetimestamp=20170808124415&amp;.html" class="mw-file-description"><img src="../File/Macro_BoundingBox_Tracing_01.png" decoding="async" width="480" height="333" class="mw-file-element" data-file-width="491" data-file-height="341"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Info del contenitore</p>
@@ -541,12 +541,12 @@ else:
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260126102326
+Cached time: 20260126102507
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.059 seconds
+CPU time usage: 0.052 seconds
+Real time usage: 0.084 seconds
 Preprocessor visited node count: 144/1000000
 Post&#8208;expand include size: 3492/2097152 bytes
 Template argument size: 26227/2097152 bytes
@@ -557,14 +557,14 @@ Unstrip post&#8208;expand size: 30909/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.895      1 -total
- 27.47%    2.169      1 Template:Macro/it
- 23.99%    1.894      2 Template:Code
- 23.52%    1.857      1 Template:MacroCode
- 20.20%    1.595      2 Template:Caption
+100.00%   20.089      1 -total
+ 44.93%    9.025      1 Template:Macro/it
+ 18.43%    3.702      2 Template:Code
+ 17.85%    3.586      1 Template:MacroCode
+ 16.15%    3.245      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126102325 and revision id 1744206. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126102507 and revision id 1744208. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
