Updated page Macro CenterOfMass/it

--- a/wiki/it/Macro_CenterOfMass.html
+++ b/wiki/it/Macro_CenterOfMass.html
@@ -7,25 +7,24 @@
 <li><a href="../pl/Macro_CenterOfMass.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: &#346;rodek masy (4% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_CenterOfMass.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1072;&#1082;&#1088;&#1086;&#1089; CenterOfMass (23% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/Macro_CenterOfMass.html" class="mw-pt-progress mw-pt-progress--high" title="&#51656;&#47049;&#51473;&#49900; &#47588;&#53356;&#47196; (85% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
 <p><span typeof="mw:File"><a href="../index.php?title=Macro_CenterOfMass.svg&amp;filetimestamp=20230907152717&amp;.html" class="mw-file-description"><img src="../File/Macro_CenterOfMass.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span> </span>
-Centro di massa
+Macro CenterOfMass
 </p>
 </td></tr>
 <tr>
 <th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Fornisce il centro di massa degli oggetti selezionati.<br><br>Versione macro: 0.5.0<br>Ultima modifica: 2022-04-06<br>Autore: chupins, s-quirin<br>
+<td class="ctEven left macro-description">Calcola e mostra il centro di massa per pi&ugrave; solidi.<br><br>Versione macro: 0.8.4<br>Ultima modifica: 2025-05-23<br>Versione FreeCAD: 0.20 e superiori<br>Autore: Schupins, SyProLei, s-quirin, farahats9<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Autore
 </th></tr>
 <tr>
-<td class="ctEven macro-author"><a href="../index.php?title=User;Chupins,_s-quirin&amp;action=edit&amp;redlink=1.html" class="new" title="User:Chupins, s-quirin (page does not exist)">chupins, s-quirin</a>
+<td class="ctEven macro-author"><a href="../index.php?title=User;Schupins,_SyProLei,_s-quirin,_farahats9&amp;action=edit&amp;redlink=1.html" class="new" title="User:Schupins, SyProLei, s-quirin, farahats9 (page does not exist)">Schupins, SyProLei, s-quirin, farahats9</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Download
@@ -43,19 +42,19 @@ Centro di massa
 <th class="ctOdd">Versione macro
 </th></tr>
 <tr>
-<td class="ctEven macro-version">0.5.0
+<td class="ctEven macro-version">0.8.4
 </td></tr>
 <tr>
 <th class="ctOdd">Data ultima modifica
 </th></tr>
 <tr>
-<td class="ctEven macro-date">2022-04-06
+<td class="ctEven macro-date">2025-05-23
 </td></tr>
 <tr>
 <th class="ctOdd">Versioni di FreeCAD
 </th></tr>
 <tr>
-<td class="ctEven FreeCAD-version"><i>None</i>
+<td class="ctEven FreeCAD-version">0.20 e superiori
 </td></tr>
 <tr>
 <th class="ctOdd">Scorciatoia
@@ -76,7 +75,6 @@ Centro di massa
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
@@ -241,15 +239,15 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126102739
+Cached time: 20260126102951
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.046 seconds
-Real time usage: 0.067 seconds
-Preprocessor visited node count: 145/1000000
-Post&#8208;expand include size: 2916/2097152 bytes
-Template argument size: 694/2097152 bytes
+CPU time usage: 0.041 seconds
+Real time usage: 0.084 seconds
+Preprocessor visited node count: 144/1000000
+Post&#8208;expand include size: 3094/2097152 bytes
+Template argument size: 816/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -257,15 +255,15 @@ Unstrip post&#8208;expand size: 2556/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.090      1 -total
- 36.74%    4.074      1 Template:Macro/it
- 23.62%    2.619      1 Template:Codeextralink
- 14.72%    1.633      1 Template:FileName
- 12.55%    1.392      1 Template:ComboBox
-  9.42%    1.045      1 Template:MenuCommand
+100.00%   20.371      1 -total
+ 32.04%    6.527      1 Template:ComboBox
+ 23.33%    4.753      1 Template:Macro/it
+ 18.32%    3.731      1 Template:FileName
+ 13.55%    2.761      1 Template:Codeextralink
+ 10.75%    2.191      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126102739 and revision id 1744218. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126102951 and revision id 1744220. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
