Updated page Macro CenterOfMass/it

--- a/wiki/it/Macro_CenterOfMass.html
+++ b/wiki/it/Macro_CenterOfMass.html
@@ -130,12 +130,8 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p>Si pu&ograve; scaricare la macro da GitHub:
 <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-macros/blob/master/Information/CenterOfMass.FCMacro">Macro CenterOfMass.FCMacro</a>
-</p>
-<div class="mw-translate-fuzzy">
-<p>Scaricare e incollare i file icona in una sottodirectory denominata CenterOfMass nella directory delle macro:
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_CenterOfMass.svg&amp;filetimestamp=20230907152717&amp;.html" class="mw-file-description"><img src="../File/Macro_CenterOfMass.svg" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p>&Egrave; possibile utilizzare questo file icona come icona della barra degli strumenti:
+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_CenterOfMass.svg&amp;filetimestamp=20230907152717&amp;.html" class="mw-file-description"><img src="../File/Macro_CenterOfMass.svg" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p>
 <h2><span class="mw-headline" id="Link">Link</span></h2>
 <p>La discussione nel forum <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=24&amp;t=31883">Macro to compute center of mass</a>
@@ -234,13 +230,13 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126103109
+Cached time: 20260126103118
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.056 seconds
-Preprocessor visited node count: 142/1000000
+CPU time usage: 0.050 seconds
+Real time usage: 0.064 seconds
+Preprocessor visited node count: 141/1000000
 Post&#8208;expand include size: 3099/2097152 bytes
 Template argument size: 821/2097152 bytes
 Highest expansion depth: 6/100
@@ -250,15 +246,15 @@ Unstrip post&#8208;expand size: 2556/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.211      1 -total
- 30.74%    2.831      1 Template:Macro/it
- 23.59%    2.173      1 Template:ComboBox
- 15.92%    1.466      1 Template:MenuCommand
- 14.59%    1.344      1 Template:Codeextralink
- 11.63%    1.071      1 Template:FileName
+100.00%   12.596      1 -total
+ 24.66%    3.106      1 Template:Macro/it
+ 23.75%    2.992      1 Template:Codeextralink
+ 16.24%    2.046      1 Template:MenuCommand
+ 15.95%    2.009      1 Template:ComboBox
+ 15.66%    1.973      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103109 and revision id 1744224. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103117 and revision id 1744226. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
