Created page with "0.8.0 / 2025-01-06: Grazie a farahats9 per il contributo * Nuovo: Mostra volume e superficie * Nuovo: Calcola i momenti di inerzia * Correzione: la macro ora funziona con l'esempio Assembly in FreeCAD 1.0 * Correzione: seleziona automaticamente il materiale per i solidi se è già assegnato dal nuovo sistema di materiali * Modifiche minori all'interfaccia utente"

--- a/wiki/it/Macro_CenterOfMass.html
+++ b/wiki/it/Macro_CenterOfMass.html
@@ -145,15 +145,13 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <p>0.8.3 / 2025-01-23:
 </p>
 <ul><li>Fix: <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD-macros/pull/191">Diverse correzioni (PR#191)</a>, FreeCAD 0.19 non &egrave; pi&ugrave; supportato</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>0.8.0 / 2025-01-06: Thanks to farahats9 for the contribution
+<p>0.8.0 / 2025-01-06: Grazie a farahats9 per il contributo
 </p>
-<ul><li>New: Show Volume and Surface area</li>
-<li>New: Calculate Moments of Inertia</li>
-<li>Fix: Macro now works with the Assembly example in FreeCAD 1.0</li>
-<li>Fix: Automatically select material for solids if it is already assigned by the new material system</li>
-<li>Minor UI changes</li></ul>
-</div>
+<ul><li>Nuovo: Mostra volume e superficie</li>
+<li>Nuovo: Calcola i momenti di inerzia</li>
+<li>Correzione: la macro ora funziona con l'esempio Assembly in FreeCAD 1.0</li>
+<li>Correzione: seleziona automaticamente il materiale per i solidi se &egrave; gi&agrave; assegnato dal nuovo sistema di materiali</li>
+<li>Modifiche minori all'interfaccia utente</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>0.7.6 / 2024-08-01: Prepare for major FreeCAD release
 </p>
@@ -225,13 +223,13 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126103158
+Cached time: 20260126103254
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.061 seconds
-Real time usage: 0.128 seconds
-Preprocessor visited node count: 139/1000000
+CPU time usage: 0.062 seconds
+Real time usage: 0.107 seconds
+Preprocessor visited node count: 138/1000000
 Post&#8208;expand include size: 3099/2097152 bytes
 Template argument size: 821/2097152 bytes
 Highest expansion depth: 6/100
@@ -241,15 +239,15 @@ Unstrip post&#8208;expand size: 2556/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.984      1 -total
- 37.27%   12.667      1 Template:Macro/it
- 35.41%   12.033      1 Template:Codeextralink
- 11.30%    3.841      1 Template:ComboBox
-  7.87%    2.676      1 Template:FileName
-  6.87%    2.336      1 Template:MenuCommand
+100.00%   21.172      1 -total
+ 29.91%    6.333      1 Template:Macro/it
+ 19.72%    4.176      1 Template:Codeextralink
+ 17.16%    3.633      1 Template:FileName
+ 17.10%    3.621      1 Template:ComboBox
+ 14.20%    3.006      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103158 and revision id 1744232. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126103254 and revision id 1744235. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
